# status-bar

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  build.zig.zon2json-lock  deps.nix  flake.nix  lol.html  result  shell.nix  status-bar  style.css
crates/bar/: Cargo.toml
crates/bar/src/: lib.rs
crates/bar/src/modules/: activeapp.rs  date.rs  mod.rs  screenrecord.rs  systemindicators.rs  workspaces.rs
crates/bar/src/start/: activeapp.rs  mod.rs  workspaces.rs
crates/datemenu/: Cargo.toml
crates/datemenu/src/: lib.rs
crates/datemenu/src/sliders/: mod.rs
crates/quicksettings/: Cargo.toml
crates/quicksettings/src/: lib.rs
crates/quicksettings/src/header/: mod.rs
crates/quicksettings/src/sliders/: mod.rs
crates/services/: Cargo.toml
crates/services/src/: audio.rs  battery.rs  lib.rs  network.rs
crates/status-bar/: Cargo.toml
crates/status-bar/src/: config.rs  main.rs  options.rs  style.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  variable.rs  vars.rs
gi/: gi.zig
gi/binding/: GLib.zig  GModule.zig  GObject.zig  Gdk.zig  GdkPixbuf.zig  Gio.zig  Graphene.zig  Gsk.zig  Gtk.zig  HarfBuzz.zig  Pango.zig  PangoCairo.zig  cairo.zig  freetype2.zig
gtk4/: build.zig  build.zig.zon  cairo.zig  core.zig  freetype2.zig  gdk.zig  gdk_pixbuf.zig  gio.zig  glib.zig  gmodule.zig  gobject.zig  graphene.zig  gsk.zig  gtk.zig  harf_buzz.zig  pango.zig  pango_cairo.zig  template.zig
nix/: default.nix
src/: main.rs  main.zig  options.rs  popup_window.rs  utils.rs  utils.zig
src/bar/: bar.zig  datemenu.zig  mod.rs  quicksettings.zig  workspaces.zig
src/bar/buttons/: active_app.rs  indicators.rs  mod.rs  workspaces.rs
src/bar/buttons/datemenu/: mod.rs
src/bar/buttons/indicators/: indicators.rs
src/bar/buttons/indicators/indicators/: cpu.rs
src/bar/buttons/quicksettings/: mod.rs  systemindicators.rs
src/bar/buttons/quicksettings/quicksettings/: header.rs  mod.rs  sliders.rs
src/bar/quicksettings/: audio.zig  network_icon.zig
src/services/audio/: audio.zig
src/services/hyprland/: hyprland.zig
src/services/network/: network.zig
src/windows/: datemenu.zig
style/: bar.scss  main.scss  style.css.map  variables.scss
style/mixins/: button.scss  calendar.scss  label.scss
style/widgets/: bar.scss  datemenu.scss  datemeu.scss  indicators.scss  quicksettings.scss
temp/: style.css  style.css.map
