[package]
name = "status-bar"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.8"
gtk4-layer-shell = "0.3"
notify = "6.1.1"
tokio = { version = "1", features = ["full"] }
hyprland = "0.4.0-alpha.2"
serde_json = "1"
chrono = "0.4"
fgl = { git = "https://github.com/fr13ndxd/fgl" }
# fgl = { path = "../fgl/" }
