[package]
name = "bar"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.8"
gtk4-layer-shell = "0.3"
tokio = { version = "1.39", features = ["full"] }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master"}
services = { path = "../services" }
utils = { path = "../utils" }

[lints]
workspace = true
