[package]
name = "bar"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.8"
gtk4-layer-shell = "0.3"
sysinfo = "0.31"
tokio = { version = "1.39", features = ["full"] }
# hyprland = { path = "/home/fr13nd/Desktop/hyprland-rs" }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
# hyprland = "0.4.0-alpha.2"
quicksettings = { path = "../quicksettings" }
fragile = "2"

services = { path = "../services" }
utils = { path = "../utils" }

[lints]
workspace = true
