[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
network-manager = "0.11"
gtk4 = "0.8"
tokio = { version = "1.39", features = ["full"] }
utils = { path = "../utils" }
notify = "6.1"
notify-debouncer-full = "0.3"
anyhow = "1"
lazy_static = "1.5"

[lints]
workspace = true
